examples/test/testpolicy5025.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5025
  namespace: namespace39
spec:
  podSelector:
    matchLabels:
      key23: value2
      key48: value14
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value43
          key8: value13
          key33: value29
      podSelector:
        matchLabels:
          key26: value49
